begining the user template

--- a/ticolandscape/app/views/layouts/users.html.erb
+++ b/ticolandscape/app/views/layouts/users.html.erb
@@ -10,7 +10,7 @@
 
   <body>
   	<div class="row">
-  		<div class="col-md-12">
+  		<div class="col-md-8 col-md-offset-2">
   		<%= render  'layouts/header'%>
 
     		<%= yield %>
