--- a/ticolandscape/app/views/admin/users/new.html.erb
+++ b/ticolandscape/app/views/admin/users/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Admin::Users#new</h1>
-<p>Find me in app/views/admin/users/new.html.erb</p>
+<h1>Create new user</h1>
+<%= render :partial => "users/form"%>
+
