--- a/ticolandscape/app/views/admin/users/_form.html.erb
+++ b/ticolandscape/app/views/admin/users/_form.html.erb
@@ -1,7 +1,12 @@
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
-		<%= simple_form_for @user, :html => {:id => 'user_form'} do |f|%>
-			<%= f.input :email, :input_html => {class: "form_control"}, :placeholder => "example@email.com", :maxlength => 50 %>
+		<%= simple_form_for @user, :html => {:id => 'form-inline'} do |f|%>
+			<div class="form-group">
+		 <div class="input-group">
+		      <div class="input-group-addon">$</div>
+				<%= f.input :email, :label => nil, :input_html => {class: "form-control"}, :placeholder => "example@email.com"%>
+			</div>
+		</div>
 			<%= f.input :password, :input_html => {class: 'form-control'}, :placeholder => "*******", :maxlength => 50 %>
 			<%= f.input :password_confirmation, :input_html => {class: 'form-control'}, :placeholder => "*******", :maxlength => 50 %>
 			<div class="row">
