--- a/ticolandscape/app/views/user_forms/_experience.html.erb
+++ b/ticolandscape/app/views/user_forms/_experience.html.erb
@@ -7,6 +7,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="experience_modal">Experiencia</h4>
       </div>
+      <%= tinymce_assets %>
       <div class="modal-body">
 
        
@@ -40,7 +41,8 @@
         </label>
       </div>
         <div class="form-group">
-            <%= f.input :summary, :label => false, :input_html => {class: "form-control"}, :placeholder => "#{(t 'field.summary')} "%>
+            <%= tinymce %>
+            <%= f.input :summary, :label => false, :input_html => {class: "tinymce ", :rows => 20, :cols => 70}, :placeholder => "#{(t 'field.summary')} "%>
         </div>
 
       </div>
