update registration form

--- a/ticolandscape/app/views/layouts/users.html.erb
+++ b/ticolandscape/app/views/layouts/users.html.erb
@@ -11,8 +11,9 @@
   <body>
   	<div class="row">
   		<div class="col-md-8 col-md-offset-2">
-  		<%= render  'layouts/header'%>
 
+  		<%= render  'layouts/header'%>
+      <%= render  'dialogs/dialogs'%>
     		<%= yield %>
     	</div>
   	</div>    
