--- a/ticolandscape/app/views/user_forms/_experience.html.erb
+++ b/ticolandscape/app/views/user_forms/_experience.html.erb
@@ -5,9 +5,8 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="experience_modal">Experiencia</h4>
-      </div>
-      <%= tinymce_assets %>
+        <h4 class="modal-title" id="experience_modal"><%= (t 'message.experience')%></h4>
+      </div>      
       <div class="modal-body">
 
        
