--- a/ticolandscape/app/views/layouts/application.html.erb
+++ b/ticolandscape/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
   <body>
   	<div class="row">
   		<div class="col-md-12">
+
   		<%= render  'layouts/header'%>
+      <%= render  'dialogs/dialogs'%>
 
     		<%= yield %>
     	</div>
